src/test/ui/borrowck/borrowck-move-moved-value-into-closure.mir.stderr
error[E0382]: use of moved value: `t`
  --> $DIR/borrowck-move-moved-value-into-closure.rs:14:12
   |
LL |     let t: Box<_> = box 3;
   |         - move occurs because `t` has type `std::boxed::Box<isize>`, which does not implement the `Copy` trait
LL | 
LL |     call_f(move|| { *t + 1 });
   |            ------    - variable moved due to use in closure
   |            |
   |            value moved into closure here
LL |     call_f(move|| { *t + 1 }); //[ast]~ ERROR capture of moved value
   |            ^^^^^^    - use occurs due to use in closure
   |            |
   |            value used here after move

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
